# lprnet_ocr

./: .gitignore  README.md  arch.txt  check_accuracy.py  dataset.py  dockerfile  eval.py  export_onnx.py  lpr_best.pth  lprnet_onnx.py  model_metrics.py  network_torch.py  onnx_inference.py  pyproject.toml  stn_best.pth  test.py  train.dvc  train.py  val.dvc
data/: load_data.py
model/: LPRNET.py  STN.py
